--- a/css/createclass_style.css
+++ b/css/createclass_style.css
@@ -190,8 +190,8 @@
 /* Element of database */
 .dropdown2{
     color: #ffffff;
-    position: relative;
-    margin-top: 150px;
+    position: absolute;
+    margin-top: 120px;
     margin-left: 90px;
     width: 300px;
     height: 50px;
