--- a/css/createclass_style.css
+++ b/css/createclass_style.css
@@ -135,8 +135,9 @@
 /* Class Element List */
 
 .body_box{
-    display: flex;
-    justify-content:flex-end;
+    position: absolute;
+    right: 10px;
+    top: 120px;
 }
 .box{
     width: 300px;
@@ -191,10 +192,11 @@
 .dropdown2{
     color: #ffffff;
     position: absolute;
-    margin-top: 120px;
+    margin-top: 150px;
     margin-left: 90px;
     width: 300px;
     height: 50px;
+    left: 0px;
 }
 .dropdown2 .option2{
     color: #000000;
