--- a/css/createclass_style.css
+++ b/css/createclass_style.css
@@ -72,6 +72,9 @@
     flex-wrap: wrap;
     justify-content: center;
 }
+.card.active{
+    display: block;
+}
 
 .card{
     width: 300px;
@@ -79,6 +82,7 @@
     margin: 20px;
     transition: all 300ms;
     border-radius: 20px;
+    display: none;
 }
 
 .card:hover{
@@ -109,6 +113,8 @@
 
 .img_card img{
     font-size: 150px;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .info_description{
