add display class saved and other functions

--- a/css/createclass_style.css
+++ b/css/createclass_style.css
@@ -331,6 +331,9 @@
 .carousel__contenedor {
 	position: relative;
 }
+.carousel__elemento img{
+    cursor: pointer;
+}
 
 .carousel__anterior,
 .carousel__siguiente {
